--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,4 @@
 title: "Thoughtful AI Tools Lab"
 ---
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+We are a research group at Calvin University focused on how AI can help people think better.
